<resources>
    <string name="app_name">Technology Today</string>
    <string name="name_placeholder">Hellen Mirren</string>
    <string name="date_placeholder">17.01.2018</string>
    <string name="title_placeholder">Very long title that would need to be cut because we can only have 1 line in title</string>
    <string name="time_placeholder">16:01</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="read_more">Click to read more...</string>
    <string name="category_placeholder">#technology</string>
    <string name="empty_text">No news could be loaded.</string>
    <string name="no_internet">No internet connection</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order-By Preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Strings For News Date Preference -->
    <string name="settings_date_label">Show News Starting From</string>
    <string name="settings_date_key" translatable="false">news_from</string>
    <string name="settings_date_default">%1$s</string>
    <string name="settings_date_hint">YYYY-MM-DD</string>

    <!-- Label for order-by newest option -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest option -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by most relevant option -->
    <string name="settings_order_by_most_relevant_label">Most Relevant</string>
    <string name="settings_order_by_most_relevant_value" translatable="false">relevance</string>

</resources>
